# ysfx

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  MAINTENANCE.md  README.md  cmake.deps.txt  cmake.eel2.txt  cmake.plugin.txt  cmake.tests.txt  cmake.tools.txt  cmake.wdl.txt  cmake.ysfx.txt
.github/workflows/: build.yml
cmake/: EmptyStaticLibrary.cmake  ExtractYsfxExports.cmake  ValidateSHA512.cmake
exports/: ysfx.txt
include/: ysfx.h
plugin/: editor.cpp  editor.h  info.cpp  info.h  lookandfeel.cpp  lookandfeel.h  parameter.cpp  parameter.h  processor.cpp  processor.h
plugin/components/: graphics_view.cpp  graphics_view.h  ide_view.cpp  ide_view.h  parameters_panel.cpp  parameters_panel.h
plugin/utility/: async_updater.cpp  async_updater.h  audio_processor_suspender.h  functional_timer.h  rt_semaphore.cpp  rt_semaphore.h
resources/patches/: WDL-atof.patch  WDL-lineparse-atof.patch  WDL-mingw-amd64.patch
sources/: ysfx.cpp  ysfx.hpp  ysfx_api_eel.cpp  ysfx_api_eel.hpp  ysfx_api_file.cpp  ysfx_api_gfx.cpp  ysfx_api_gfx.hpp  ysfx_api_gfx_dummy.hpp  ysfx_api_gfx_lice.hpp  ysfx_api_reaper.cpp  ysfx_config.cpp  ysfx_config.hpp  ysfx_parse.cpp  ysfx_parse.hpp  ysfx_parse_filename.cpp  ysfx_parse_filename.cpp.re  ysfx_parse_slider.cpp  ysfx_parse_slider.cpp.re  ysfx_preset.cpp  ysfx_utils.cpp  ysfx_utils.hpp  ysfx_utils_fts.cpp
sources/eel2-gas/sources/: asm-nseel-x64-sse.S  ref-hash-sha512.txt
sources/lice_stb/: lice_stb_bmp.cpp  lice_stb_gif.cpp  lice_stb_jpg.cpp  lice_stb_png.cpp
tests/: ysfx_test_audio_flac.cpp  ysfx_test_audio_wav.cpp  ysfx_test_c_api.c  ysfx_test_filesystem.cpp  ysfx_test_main.cpp  ysfx_test_midi.cpp  ysfx_test_parse.cpp  ysfx_test_preset.cpp  ysfx_test_serialization.cpp  ysfx_test_slider.cpp  ysfx_test_utils.cpp  ysfx_test_utils.hpp
tests/tools/: ysfx_parse_menu.cpp
tools/: ysfx_tool.cpp
